[add]link to profile-student

--- a/tuCodigo/tucodigo_front/src/app/Components/contact/contact.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/contact/contact.component.html
@@ -45,7 +45,7 @@
         ¿En que podemos ayudarte?</label
       >
       <textarea class="form-control" required="true" name="contactContent" id="" cols="30" rows="8" #contactContent="ngModel"
-      [(ngModel)]="contactService.selectedContact.contactContent"></textarea>
+      [(ngModel)]="contactService.selectedContact.contactContent" style="resize:none"></textarea>
      <!--  <input
         required="true"
         class="form-control content text-start"
