--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
@@ -2,18 +2,27 @@
 
 <section class="bg-foruma">
     <h2 class="ms-3 fs-1 bg-title" style="color: #ecf00d">Respuestas</h2>
-   
-    <form class="m-5 main-form animated fadeInUp d-flex align-self-center"  #textAnswer="ngForm" *ngIf="popupAnswer">
-        <div class="form-group m-2 fs-5">
-            <textarea type="text"  class="form-control fs-5" name="textAnswer" #textAnswer="ngModel"
+
+    <form class="m-5 animated fadeInUp main-form" #textAnswer="ngForm" *ngIf="popupAnswer">
+        <div >
+            <textarea class="fs-4" type="text"  style="width: 100%; height: 100px; background-color:#83bfe2;" name="textAnswer" #textAnswer="ngModel" placeholder="Escribe tu aporte de respuesta aquí"
                 [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
         </div>
         <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
             (click)="updateAnswer(idForum,textAnswer)">enviar respuesta</a>
-    </form> 
+    </form>
+
+  <!--   <form class="m-5 main-form animated fadeInUp d-flex align-self-center" #textAnswer="ngForm" *ngIf="popupAnswer">
+        <div class="form-group m-2 fs-5">
+            <textarea type="text" class="form-control fs-5" name="textAnswer" #textAnswer="ngModel"
+                [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
+        </div>
+        <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
+            (click)="updateAnswer(idForum,textAnswer)">enviar respuesta</a>
+    </form> -->
 
     <div class="card m-5 " *ngFor="let forum of forumService.forums">
-         <div class="card-body" *ngIf="idForum === forum._id">
+        <div class="card-body" *ngIf="idForum === forum._id">
             <h5 class="card-title fs-3" style="color:#328cc1"><svg xmlns="http://www.w3.org/2000/svg" width="40"
                     height="40" fill="currentColor" class="bi bi-pin-fill" viewBox="0 0 16 16">
                     <path
@@ -49,14 +58,11 @@
                     aporte</a>
             </div>
         </div>
-      
-        
-
     </div>
 
-  <!-- <div class="main-form animated fadeInUp" *ngIf="popupAnswer"> -->
-    
-<!-- </div> -->
+    <!-- <div class="main-form animated fadeInUp" *ngIf="popupAnswer"> -->
+
+    <!-- </div> -->
 
 
 </section>
