--- a/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
@@ -32,7 +32,7 @@
       
     </div>
 
-    <a href="/profile-student/`${detoken._id}`" class="btn btn-warning ms-5 ms-5" >Iniciar sesion</a>
+    <button href="" class="btn btn-warning ms-5 ms-5" >Iniciar sesion</button>
   </form>
 
   
