--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.css
@@ -14,9 +14,19 @@
   background-color: #0b3c5d;
 }
 
-.main-form {
+/* .main-form {
 
    z-index: 10;
    background-color: #0B3C5D;
    ;  
- }
+ } */
+
+ .main-form {
+  position:fixed !important; /* lo deja fijo en un parte de la pantalla */
+  top: 10% !important;
+  left: 30% !important;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px;
+  border: solid 3px #ffc107 ;
+}
