--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
@@ -3,14 +3,7 @@
 <section class="bg-foruma">
     <h2 class="ms-3 fs-1 bg-title" style="color: #ecf00d">Respuestas</h2>
 
-    <form class="m-5 animated fadeInUp main-form" #textAnswer="ngForm" *ngIf="popupAnswer">
-        <div >
-            <textarea class="fs-4" type="text"  style="width: 100%; height: 100px; background-color:#83bfe2;" name="textAnswer" #textAnswer="ngModel" placeholder="Escribe tu aporte de respuesta aquí"
-                [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
-        </div>
-        <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
-            (click)="updateAnswer(idForum,textAnswer)">enviar respuesta</a>
-    </form>
+    
 
   <!--   <form class="m-5 main-form animated fadeInUp d-flex align-self-center" #textAnswer="ngForm" *ngIf="popupAnswer">
         <div class="form-group m-2 fs-5">
@@ -66,3 +59,12 @@
 
 
 </section>
+
+<form class="m-5 animated fadeInUp main-form" #textAnswer="ngForm" *ngIf="popupAnswer">
+    <div >
+        <textarea class="fs-4" type="text"  style="resize: none; width: 100%; height: 100px; background-color:#83bfe2;" name="textAnswer" #textAnswer="ngModel" placeholder="Escribe tu aporte de respuesta aquí"
+            [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
+    </div>
+    <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
+        (click)="updateAnswer(idForum,textAnswer); popupAnswerF()">enviar respuesta</a>
+</form>
