se deja activo acción para que solo traiga un estudiamte en profile-student

--- a/tuCodigo/tucodigo_front/src/app/Components/profile-student/profile-student.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/profile-student/profile-student.component.html
@@ -3,7 +3,7 @@
 <div class="main-body  col-md-12 bg-profile" *ngFor="let profile of userService.userLists">
     <!-- /Breadcrumb -->
 
-    <div class="row  gutters-sm" *ngIf="profile._id == profile._id">
+    <div class="row  gutters-sm" *ngIf="idStudent == profile._id">
         
             <div class="col-md-4 mb-3">
                 <div class="card">
