--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
@@ -61,10 +61,12 @@
 </section>
 
 <form class="m-5 animated fadeInUp main-form"  #textAnswer="ngForm" *ngIf="popupAnswer">
+    <div></div>
     <div >
-        <textarea class="fs-4" type="text"  style="resize: none; width: 100%; height: 100px; background-color:#83bfe2;" name="textAnswer" #textAnswer="ngModel" placeholder="Escribe tu aporte de respuesta aquí"
+        <textarea class="fs-4" type="text"  style=" width: 100%; height: 100px; background-color:#83bfe2;" name="textAnswer" #textAnswer="ngModel" placeholder="Escribe tu aporte de respuesta aquí"
             [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
     </div>
+    <div></div>
     <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
         (click)="updateAnswer(idForum,textAnswer); popupAnswerF()">enviar respuesta</a>
 </form>
