--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
@@ -1,2 +1,130 @@
-<p>home works!</p>
-<a  class="btn btn-warning" (click)="goProfile()">Ir a perfil</a>
+<link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/imagehover.css/2.0.0/css/imagehover.min.css">
+<div class="tarjeta main-body">
+  <div class="wrapper">
+    <div style="background-image: url(../../../assets/img/fondofinal.jpg)">
+      <section class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="card d-flex" style="width: 500px">
+            <h1 class="titulos">Desarrolla tus capacidades</h1>
+            <img
+              src="../../../assets/img/imagen2.jpg"
+              class="card-img-down"
+              alt="..."
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div style="background-image: url(../../../assets/img/fondofinal.jpg)">
+      <section class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="card" style="width: 500px">
+            <h1 class="titulos">Aprende con nosotros</h1>
+            <img
+              src="../../../assets/img/codigo.jpg"
+              class="card-img-down"
+              alt="..."
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div style="background-image: url(../../../assets/img/fondofinal.jpg)">
+      <section class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="card" style="width: 500px">
+            <h1 class="titulos">Desarrolla tu ingenio</h1>
+            <img
+              src="../../../assets/img/imagen3.jpg"
+              class="card-img-down"
+              alt="..."
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div style="background-image: url(../../../assets/img/fondofinal.jpg)">
+      <section class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="card" style="width: 600px">
+            <h1 class="titulos">Todos los lenguajes</h1>
+            <img
+              src="../../../assets/img/carusel-1.jpg"
+              class="card-img-down"
+              alt="..."
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+    <div style="background-image: url(../../../assets/img/fondofinal.jpg)">
+      <section class="position-absolute top-50 start-50 translate-middle">
+        <div class="d-flex flex-wrap justify-content-center">
+          <div class="card" style="width: 600px">
+            <h1 class="titulos">En un solo lugar</h1>
+            <img
+              src="../../../assets/img/clase.jpg"
+              class="card-img-down"
+              alt="..."
+            />
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  <br />
+
+  <!-- burbujas-->
+  <div class="burbujas">
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+    <div class="burbuja"></div>
+  </div>
+</div>
+
+<div
+  class="card-group d-flex flex-row flex-wrap align-items-center justify-content-center mb-3 gap-5"
+>
+  <div routerLink="/html-course">
+	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
+		<img src="../../../assets/img/html.png" />
+		<figcaption>
+		  El Lenguaje de Marcado de Hipertexto (HTML) es el código que se utiliza
+		  para estructurar y desplegar una página web y sus contenidos. Por ejemplo,
+		  sus contenidos podrían ser párrafos, una lista con viñetas, o imágenes y
+		  tablas de datos
+		</figcaption>
+	  </figure>
+  </div>
+
+  <div routerLink="/css-course">
+	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
+		<img src="../../../assets/img/css.png" />
+		<figcaption>
+		  Es un lenguaje informático que especifica
+		  cómo se presentan los documentos a los usuarios: cómo se diseñan,
+		  compaginan, etc. Un documento suele ser un archivo de texto estructurado
+		  con un lenguaje de marcado.
+		</figcaption>
+	  </figure>
+  </div>
+
+  <div routerLink="/java-script-course">
+	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
+		<img style="background-position-y: 50px" src="../../../assets/img/jv.png" />
+		<figcaption>
+		  JavaScript es el lenguaje de programación que debes usar para añadir
+		  características interactivas a tu sitio web, (por ejemplo, juegos, eventos
+		  que ocurren cuando los botones son presionados y
+		  mucho más)
+		</figcaption>
+	  </figure>
+  </div>
+</div>
