--- a/tuCodigo/tucodigo_front/src/app/Components/login/login.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/login/login.component.css
@@ -1,9 +1,17 @@
 .bg-login {
-    background-image: url("../../../assets/img/bg-login.jpg");
+    background-image: url("../../../assets/img/bg-login.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 100%;
+}
+
+.logg {
+    padding: 20px;
+    margin: 20px;
+    border-top: 10px solid #ffc107;
+    border-left: 10px solid #ffc107;
+    background-color: white;
 }
