--- a/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,90 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-yellow-tucode">
+  <div class="container-fluid">
+    <a class="navbar-brand bg-logo" href="#">
+      <img style="height: 50px" src="../../../assets/img/logo2.svg" alt="" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li  class="nav-item">
+          <a  class="nav-link" aria-current="page" routerLink="/home" routerLinkActive="main-active">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Cursos
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" routerLink="/html-course" routerLinkActive="main-active">HTML</a></li>
+            <li><a class="dropdown-item" routerLink="/css-course" routerLinkActive="main-active">CSS</a></li>
+            <li>
+              <a class="dropdown-item" routerLink="/java-script-course" routerLinkActive="main-active">JavaScript</a>
+            </li>
+          </ul>
+        </li>
+        <li  class="nav-item">
+          <a class="nav-link" routerLink="/contact" routerLinkActive="main-active">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/forum" routerLinkActive="main-active">Foro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/profile-admin" routerLinkActive="main-active" >Admin</a>
+        </li>
+      </ul>
+      <div *ngIf="!isLoged(); else logIn" class="d-flex ms-auto">
+       
+        <a
+          href="/login"
+          class="btn btn-dark m-2"
+          style="background-color: #0b3c5d"
+          >Iniciar Sesion</a
+        >
+        <a
+        href="/register"
+        class="btn btn-dark m-2"
+        style="background-color: #0b3c5d"
+        >Registrarme</a
+      >
+      </div>
+
+     <ng-template #logIn>
+        <li class="nav-item dropdown ms-auto">
+          <a
+            class="btn btn-primary dropdown-toggle"
+            style="background-color: #0B3C5D;"
+            href="#"
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            {{userService.getDataFromToken().name}}
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="" (click)="goProfile()">Mi Perfil</a></li>
+            <li><a class="dropdown-item" (click)="goCourse()">{{userService.getDataFromToken().actualCourse}}</a></li>
+            <li><a class="dropdown-item" href="" (click)="logOut()">Cerrar sesion</a></li>
+            
+          </ul>
+        </li>
+      </ng-template>
+    </div>
+  </div>
+</nav>
