--- a/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
@@ -35,7 +35,7 @@
         />
       </div>
 
-      <button href="" class="btn btn-warning ms-5 ms-5">Iniciar sesion</button>
+      <button class="btn btn-warning ms-5 ms-5">Iniciar sesion</button>
     </form>
   </div>
 </div>
