primer ajuste de estilos en forum, forumAns y profileStudent

--- a/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum-ans/forum-ans.component.html
@@ -1,18 +1,9 @@
-<p>forum-ans works!</p>
 
-<section class="bg-foruma">
+
+<section class="bg-foruma pb-5">
     <h2 class="ms-3 fs-1 bg-title" style="color: #ecf00d">Respuestas</h2>
 
-    
-
-  <!--   <form class="m-5 main-form animated fadeInUp d-flex align-self-center" #textAnswer="ngForm" *ngIf="popupAnswer">
-        <div class="form-group m-2 fs-5">
-            <textarea type="text" class="form-control fs-5" name="textAnswer" #textAnswer="ngModel"
-                [(ngModel)]="forumService.selectedForum.answerContent"></textarea>
-        </div>
-        <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;"
-            (click)="updateAnswer(idForum,textAnswer)">enviar respuesta</a>
-    </form> -->
+  
 
     <div class="card m-5 " *ngFor="let forum of forumService.forums">
         <div class="card-body" *ngIf="idForum === forum._id">
@@ -46,8 +37,8 @@
                         d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z" />
                 </svg> {{answers}} </p>
             <div class="d-flex justify-content-between">
-                <a href="/forum" class="btn btn-warning" style="color: #1D2731; font-weight: bold;">Volver al foro</a>
-                <a class="btn btn-warning" style="color: #1D2731; font-weight: bold;" (click)="popupAnswerF()">Haz tu
+                <a href="/forum" class="btn btn-warning" style="color: #1D2731; font-weight: bold; border-color: #1D2731;">Volver al foro</a>
+                <a class="btn btn-warning" style="color: #1D2731; font-weight: bold; border-color: #1D2731;" (click)="popupAnswerF()">Haz tu
                     aporte</a>
             </div>
         </div>
