--- a/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
@@ -1,5 +1,5 @@
-<p>forum works</p>
-<div class="bg-forum pt-5">
+
+<div class="bg-forum pt-5 pb-5">
   <div class="container">
     <div>
       <h2 class="fs-1" style="color: #ecf00d; border:#328cc1"> <h3></h3></h2>      
@@ -7,30 +7,30 @@
 
     <form #formForum="ngForm" class="m-4">
       <div class="form-group m-2">
-        <label for="Name" class="fs-5 bg-title" style="color: antiquewhite">Nombre o Usuario</label>
+        <label for="Name" class="fs-5 bg-title" style="color: antiquewhite; font-weight: bolder;">Nombre o Usuario</label>
         <input type="name" class="form-control inputstl fs-5" name="forumUser" #forumUser="ngModel"
           [(ngModel)]="forumService.selectedForum.forumUser">
       </div>
       <div class="form-group m-2">
-        <label for="Email1" class="fs-5 bg-title" style="color: antiquewhite">Correo Electrónico</label>
+        <label for="Email1" class="fs-5 bg-title" style="color: antiquewhite; font-weight: bolder;">Correo Electrónico</label>
         <input type="email" class="form-control inputstl fs-5" name="forumEmail" #forumEmail="ngModel"
           [(ngModel)]="forumService.selectedForum.forumEmail">
       </div>
-      <div class="form-group m-2" class="fs-5 bg-title" style="color: antiquewhite">
-        <label for="name">Título de tu pregunta</label>
+      <div class="form-group m-2" >
+        <label for="name" class="fs-5 bg-title" style="color: antiquewhite; font-weight: bolder;">Título de tu pregunta</label>
         <input type="text" class="form-control inputstl fs-5" name="forumTitle" #forumTitle="ngModel"
           [(ngModel)]="forumService.selectedForum.forumTitle">
       </div>
-      <div class="form-group m-2 fs-5">
+      <div class="form-group m-2 ">
        
-        <textarea name="txtMsg" class="form-control inputstl fs-5" placeholder="Escribe aqui Tu pregunta*"
+        <textarea name="txtMsg fs-5" class="form-control inputstl fs-5" placeholder="Escribe aqui tu pregunta*"
           style="width: 100%; height: 150px;" name="ForumContent" #ForumContent="ngModel"
           [(ngModel)]="forumService.selectedForum.ForumContent"></textarea>
 
       </div>
      
 
-      <a class="btn btn-warning fs-5" style="color: #1D2731" (click)="createForum(formForum)">Registrar pregunta</a>
+      <a class="btn btn-warning fs-5" style="color: #1D2731;font-weight: bold; border-color:antiquewhite;" (click)="createForum(formForum)">Registrar pregunta</a>
 
       <!-- (click)="createForum(formForum)" -->
     </form>
@@ -38,7 +38,7 @@
 
   <br>
 
-  <section class="mb-5">
+  <section class="">
     <h2 class="ms-3 fs-1 bg-title" style="color: #ecf00d">Preguntas anteriores</h2>
 
     <div class="card m-5 inputstl1" *ngFor="let forum of forumService.forums">
@@ -57,8 +57,8 @@
         
         
         <div class="d-flex justify-content-between">
-          <a href="/forumAns/{{forum._id}}" class="btn btn-warning" style="color: #1D2731; font-weight: bold;" >Ver respuestas</a>
-          <a href="#" class="btn btn-warning" style="color: #1D2731; font-weight: bold;">Haz tu aporte</a>        </div>
+          <a href="/forumAns/{{forum._id}}" class="btn btn-warning" style="color: #1D2731; font-weight: bold; border-color: #1D2731;" >Ver respuestas</a>
+          <a href="#" class="btn btn-warning" style="color: #1D2731; font-weight: bold; border-color: #1D2731;">Haz tu aporte</a>        </div>
       </div>
     </div>
   </section>
