--- a/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
@@ -50,13 +50,14 @@
           </svg>{{forum.forumTitle}}</h5>
         <hr>
         <p class="card-text fs-4">{{forum.ForumContent}}</p>
+        <p class="card-text fs-6" style="color:gray">creado por: {{forum.forumUser}}</p>
         <p class="card-text"> <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
             class="bi bi-tags-fill" viewBox="0 0 16 16" style="color: deeppink;">
             <path
               d="M2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2zm3.5 4a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
             <path
               d="M1.293 7.793A1 1 0 0 1 1 7.086V2a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l.043-.043-7.457-7.457z" />
-          </svg> <span *ngFor="let tag of forum.forumTags"> {{tag}} </span></p>
+          </svg> <span *ngFor="let tag of forum.forumTags">   {{tag}} - </span></p>
 
 
         <div class="d-flex justify-content-between">
