--- a/tuCodigo/tucodigo_front/src/app/Components/profile-student/profile-student.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/profile-student/profile-student.component.html
@@ -81,7 +81,10 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-sm-3">
-                            <h6 class="mb-0">Nombre</h6>
+                            <h6 class="mb-0 fs-5"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="color: darkorange;" fill="currentColor" class="bi bi-person-badge" viewBox="0 0 16 16">
+                                <path d="M6.5 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1h-3zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                <path d="M4.5 0A2.5 2.5 0 0 0 2 2.5V14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2.5A2.5 2.5 0 0 0 11.5 0h-7zM3 2.5A1.5 1.5 0 0 1 4.5 1h7A1.5 1.5 0 0 1 13 2.5v10.795a4.2 4.2 0 0 0-.776-.492C11.392 12.387 10.063 12 8 12s-3.392.387-4.224.803a4.2 4.2 0 0 0-.776.492V2.5z"/>
+                              </svg> Nombre</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             {{userService.selectedUser.name}}
@@ -90,7 +93,10 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm-3">
-                            <h6 class="mb-0">Apellido</h6>
+                            <h6 class="mb-0 fs-5"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="color: darkorange;" fill="currentColor" class="bi bi-file-person" viewBox="0 0 16 16">
+                                <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
+                                <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                              </svg> Apellido</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             {{userService.selectedUser.lastName}}
@@ -98,8 +104,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Correo Electrónico</h6>
+                        <div class="col-sm-3 ">
+                            <h6 class="mb-0 fs-5"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" style="color:darkslateblue" class="bi bi-envelope" viewBox="0 0 16 16">
+                                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                              </svg> Correo Electrónico</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             {{userService.selectedUser.email}}
@@ -108,7 +116,9 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm-3">
-                            <h6 class="mb-0">Curso actual</h6>
+                            <h6 class="mb-0 fs-5"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="color: darkgreen;" fill="currentColor" class="bi bi-braces-asterisk" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C2.25 2 1.49 2.759 1.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6ZM14.886 7.9v.164c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456v-1.3c-1.114 0-1.49-.362-1.49-1.456V4.352C14.51 2.759 13.75 2 12.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6ZM7.5 11.5V9.207l-1.621 1.621-.707-.707L6.792 8.5H4.5v-1h2.293L5.172 5.879l.707-.707L7.5 6.792V4.5h1v2.293l1.621-1.621.707.707L9.208 7.5H11.5v1H9.207l1.621 1.621-.707.707L8.5 9.208V11.5h-1Z"/>
+                              </svg> Curso actual</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             {{userService.selectedUser.actualCourse}}
@@ -116,8 +126,11 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Logros</h6>
+                        <div class="col-sm-3 ">
+                            <h6 class="mb-0 fs-5"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="color: chocolate;" fill="currentColor" class="bi bi-award" viewBox="0 0 16 16">
+                                <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68L9.669.864zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702 1.509.229z"/>
+                                <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z"/>
+                              </svg> Logros</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
                             {{userService.selectedUser.goals}}
