--- a/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="container-fluid bg-login d-flex align-items-center justify-content-center flex-column"
+  class="main-container bg-login d-flex align-items-center justify-content-center flex-column"
 >
   <div class="logg">
     <h1 class="animated fadeInDown">Iniciar Sesion</h1>
