--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
@@ -1,3 +1,4 @@
+
 <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/imagehover.css/2.0.0/css/imagehover.min.css">
 <div class="tarjeta main-body">
   <div class="wrapper">
@@ -92,10 +93,11 @@
 <div
   class="card-group d-flex flex-row flex-wrap align-items-center justify-content-center mb-3 gap-5"
 >
-  <div routerLink="/html-course">
+  <div routerLink="/html-course" style="cursor: pointer;">
 	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
 		<img src="../../../assets/img/html.png" />
 		<figcaption>
+      <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">HTML</h4>
 		  El Lenguaje de Marcado de Hipertexto (HTML) es el código que se utiliza
 		  para estructurar y desplegar una página web y sus contenidos. Por ejemplo,
 		  sus contenidos podrían ser párrafos, una lista con viñetas, o imágenes y
@@ -104,10 +106,11 @@
 	  </figure>
   </div>
 
-  <div routerLink="/css-course">
+  <div routerLink="/css-course" style="cursor: pointer;">
 	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
 		<img src="../../../assets/img/css.png" />
 		<figcaption>
+      <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">CSS</h4>
 		  Es un lenguaje informático que especifica
 		  cómo se presentan los documentos a los usuarios: cómo se diseñan,
 		  compaginan, etc. Un documento suele ser un archivo de texto estructurado
@@ -116,15 +119,17 @@
 	  </figure>
   </div>
 
-  <div routerLink="/java-script-course">
-	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
-		<img style="background-position-y: 50px" src="../../../assets/img/jv.png" />
-		<figcaption>
-		  JavaScript es el lenguaje de programación que debes usar para añadir
+  <div routerLink="/java-script-course" style="cursor: pointer;">
+    <figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
+      <img src="../../../assets/img/jv.png" />
+      <figcaption>
+        <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">JavaScript</h4>
+
+        Es el lenguaje de programación que debes usar para añadir
 		  características interactivas a tu sitio web, (por ejemplo, juegos, eventos
 		  que ocurren cuando los botones son presionados y
 		  mucho más)
-		</figcaption>
-	  </figure>
-  </div>
+      </figcaption>
+      </figure>
+    </div>
 </div>
