--- a/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.html
@@ -1,54 +1,59 @@
-<div class="bg-bluedark-tucode">
-  <div
-    class="animated fadeInDown container main-container d-flex flex-row flex-wrap row"
-  >
-    <!-- style="width: 280px;" -->
-    <div
-      class="col-md-3 p-3 text-white bg-medium-tucode main-menu"
-      style="height: 100vh"
-    >
-      <h2 class="text-center">TuCodigo.Com</h2>
-      <hr style="background-color: white; height: 3px" />
+<div class="bg-bluedark-tucode d-flex align-items-stretch">
+  <div class="animated fadeInDown main-container d-flex flex-row flex-wrap row">
+    <div class="p-3 text-white bg-medium-tucode main-menu">
+      <div class="menu-info">
+        <h2 class="text-center">TuCodigo.Com</h2>
+        <hr style="background-color: white; height: 3px" />
 
-      <ul class="nav nav-pills flex-column mb-auto main-ul">
-        <li
-          (click)="showTablef()"
-          class="text-center text-white btn elemento_valor"
-          [ngClass]="showTable ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'"
-        >
-          Usuarios Registrados
+        <ul class="nav nav-pills flex-column mb-auto main-ul">
+          <li
+            (click)="showTablef()"
+            class="text-center text-white btn elemento_valor"
+            [ngClass]="
+              showTable ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'
+            "
+          >
+            Usuarios Registrados
 
-          <hr style="background-color: white; height: 3px" />
-        </li>
-        <li
-          (click)="showSolicitudf()"
-          class="text-center m-2 text-white btn"
-          [ngClass]="showSolicitud ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'"
-        >
-          Solicitudes Recibidas
-          <hr style="background-color: white; height: 3px" />
-        </li>
-        <li (click)="showCoursesf()"
-         class="text-center m-2 text-white btn"
-         [ngClass]="showCourses ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'"
-         >
-          Administrar Cursos
-          <hr style="background-color: white; height: 3px" />
-        </li>
-        <li (click)="showForumf()" 
-        class="text-center m-2 text-white btn"
-        [ngClass]="showforum ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'"
-        >
-          Administrar Foros
-          <hr style="background-color: white; height: 3px" />
-        </li>
-      </ul>
+            <hr style="background-color: white; height: 3px" />
+          </li>
+          <li
+            (click)="showSolicitudf()"
+            class="text-center m-2 text-white btn"
+            [ngClass]="
+              showSolicitud
+                ? 'bg-warning animated flipInX'
+                : 'bg-bluedark-tucode'
+            "
+          >
+            Solicitudes Recibidas
+            <hr style="background-color: white; height: 3px" />
+          </li>
+          <li
+            (click)="showCoursesf()"
+            class="text-center m-2 text-white btn"
+            [ngClass]="
+              showCourses ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'
+            "
+          >
+            Administrar Cursos
+            <hr style="background-color: white; height: 3px" />
+          </li>
+          <li
+            (click)="showForumf()"
+            class="text-center m-2 text-white btn"
+            [ngClass]="
+              showforum ? 'bg-warning animated flipInX' : 'bg-bluedark-tucode'
+            "
+          >
+            Administrar Foros
+            <hr style="background-color: white; height: 3px" />
+          </li>
+        </ul>
+      </div>
     </div>
     <!-- tabla de usuarios -->
-    <div
-      *ngIf="showTable"
-      class="main-table table-responsive-sm col-md-5 animated fadeInLeft"
-    >
+    <div *ngIf="showTable" class="main-table animated fadeInLeft">
       <table class="table table-striped main-table">
         <thead>
           <th class="text-center bg-medium-tucode text-white">ID</th>
@@ -131,7 +136,10 @@
             <td data-label="respuesta" class="text-white">
               {{ cont.contactAnswers }}
             </td>
-            <td data-label="Opciones" class="text-white">
+            <td
+              data-label="Opciones"
+              class="text-white d-flex justify-content-center flex-column"
+            >
               <a (click)="deleteContact(cont._id)" class="btn btn-danger m-2">
                 Borrar
               </a>
@@ -147,49 +155,76 @@
     <!-- fin solicitudes recibidas -->
 
     <!-- solicitud de foros -->
-    <div
-      *ngIf="showforum"
-      class="main-table table-responsive-sm col-md-9 animated fadeInLeft"
-    >
+    <div *ngIf="showforum" class="main-table animated fadeInLeft">
       <table class="table table-striped main-table">
         <thead>
-          <th class="text-center bg-medium-tucode text-white">ID</th>
+          <!--  <th class="text-center bg-medium-tucode text-white">ID</th>
           <th class="text-center bg-medium-tucode text-white">
             titulo del foro
           </th>
           <th class="text-center bg-medium-tucode text-white">
             administrar etiquetas
+          </th> -->
+          <th class="text-center bg-medium-tucode text-white">Cabeceros</th>
+          <th class="text-center bg-medium-tucode text-white">
+            Pregunta del Usuario
           </th>
           <th class="text-center bg-medium-tucode text-white">
-            contenido del foro
+            Respuestas del foro
           </th>
-          <th class="text-center bg-medium-tucode text-white">
-            respuestas del foro
-          </th>
-          <th class="bg-medium-tucode text-center text-white">Opciones</th>
         </thead>
         <tbody>
           <tr *ngFor="let forum of forumService.forums">
-            <td data-label="ID" class="text-white">{{ forum._id }}</td>
+            <!-- <td data-label="ID" class="text-white">{{ forum._id }}</td>
             <td data-label="Titulo del Foro" class="text-white">
               {{ forum.forumTitle }}
             </td>
             <td data-label="Administrar Etiquetas" class="text-white">
               {{ forum.forumTags }}
-            </td>
-            <td data-label="Contenido de Foro" class="text-white">
-              {{ forum.ForumContent }}
-            </td>
-            <td data-label="Comentarios" class="text-white">
-              {{ forum.ForumAnswers }}
-            </td>
-            <td data-label="Opciones" class="text-white">
+            </td> -->
+            <td data-label="Contenido de Foro" class="text-white main-ans">
+              <p>
+                <span> <b>ID</b> </span> {{ forum._id }}
+              </p>
+              <p>
+                <span> <b>Titulo</b> </span> {{ forum.forumTitle }}
+              </p>
+              <p>
+                <span> <b>Etiquetas</b> </span> {{ forum.forumTags }}
+              </p>
+
               <a (click)="deleteForum(forum._id)" class="btn btn-danger m-2">
                 Borrar
               </a>
               <a (click)="upDateForum(forum)" class="btn btn-primary m-2">
                 Editar</a
               >
+            </td>
+            <td data-label="Contenido de Foro" class="text-white main-ans">
+              {{ forum.ForumContent }}
+            </td>
+            <td
+              *ngFor="let ans of forum.ForumAnswers"
+              data-label="Comentarios"
+              class="text-white d-flex d-block main-ans2 gap-2"
+            >
+              {{ ans }}
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-pencil-square main-but-ed"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"
+                />
+                <path
+                  fill-rule="evenodd"
+                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"
+                />
+              </svg>
             </td>
           </tr>
         </tbody>
@@ -248,13 +283,13 @@
 
 <form
   *ngIf="openUp"
-  class="animated fadeInDown bg-medium-tucode main-form"
+  class="animated fadeInDown bg-medium-tucode main-form p-3 d-flex flex-column"
   #updateForm="ngForm"
   (ngSubmit)="addUser(userService.selectedUser._id, updateForm)"
 >
   <h3 class="text-white text-center">Formato de Edición</h3>
 
-  <div class="m-2">
+  <div class="m-2 ms-3">
     <label class="text-white" for="name">Nombre</label>
     <div>
       <input
@@ -267,7 +302,7 @@
     </div>
   </div>
 
-  <div class="m-2">
+  <div class="m-2 ms-3">
     <label class="text-white" for="lastName">Apellido</label>
     <div>
       <input
@@ -280,7 +315,7 @@
     </div>
   </div>
 
-  <div class="m-2">
+  <div class="m-2 ms-3">
     <label class="text-white me-2" for="email">Correo </label>
     <div>
       <input
@@ -293,7 +328,7 @@
     </div>
   </div>
 
-  <div class="m-2">
+  <div class="align-self-center">
     <label class="text-white form-label me-2" for="permissions"
       >Permisos de ADMIN</label
     >
@@ -308,7 +343,7 @@
     />
   </div>
 
-  <div class="m-2">
+  <div class="align-self-center">
     <label class="text-white form-label me-2" for="permissions"
       >Permisos de Cliente</label
     >
@@ -323,7 +358,7 @@
     />
   </div>
 
-  <div class="m-2">
+  <div class="align-self-center">
     <label class="text-white form-label me-2" for="permissions"
       >Cuenta verificada</label
     >
@@ -338,7 +373,7 @@
       #permissionsVerified="ngModel"
     />
   </div>
-  <div class="align-self-center">
+  <div class="row align-self-center me-2">
     <button class="btn btn-light m-2">Guardar</button>
     <button class="btn btn-light m-2" (click)="resetForm()">Cerrar</button>
   </div>
@@ -351,10 +386,10 @@
   #answerForm="ngForm"
   (ngSubmit)="ansContact(contactService.selectedContact._id, answerForm)"
   *ngIf="showSolicitudUp"
-  class="animated fadeInDown bg-medium-tucode main-form"
+  class="animated fadeInDown bg-medium-tucode main-form p-4 d-flex flex-column"
 >
   <!-- (ngSubmit)="ansContact(contactService.selectedContact._id,answerForm)" -->
-  <h3 class="text-white text-center mb-5">Ingresa una respuesta</h3>
+  <h3 class="text-white text-center mb-2">Envíar respuesta</h3>
   <textarea
     class="form-control"
     required="true"
@@ -366,13 +401,18 @@
     [(ngModel)]="contactService.selectedContact.contactAnswers"
     style="resize: none"
   ></textarea>
-  <!-- <input type="text" name="contactAnswers" #contactAswers="ngModel"
-[(ngModel)]="contactService.selectedContact.contactAnswers"> -->
-
-  <button form="formcontactAnswer" class="btn btn-light m-2">Envíar</button>
-  <button (click)="showSolicitudUpFun()" class="btn btn-light m-2">
-    Cerrar
-  </button>
+  <div class="d-flex align-items-center justify-content-center">
+    <button class="btn btn-light m-2" form="formcontactAnswer">Envíar</button>
+    <button (click)="showSolicitudUpFun()" class="btn btn-light m-2">
+      Cerrar
+    </button>
+  </div>
+  <!-- <div class="flex-column aling-self-center me-3">
+    <button form="formcontactAnswer" class="btn btn-light m-2">Envíar</button>
+    <button (click)="showSolicitudUpFun()" class="btn btn-light m-2">
+      Cerrar
+    </button>
+  </div> -->
 </form>
 
 <!--  forumulario de foros -->
@@ -380,51 +420,69 @@
   #formAdminForum="ngForm"
   (ngSubmit)="editForum(forumService.selectedForum._id, formAdminForum)"
   *ngIf="showforumUp"
-  class="animated fadeInDown bg-medium-tucode main-form"
+  class="animated fadeInDown
+   bg-medium-tucode main-form d-flex flex-column p-3"
 >
   <h3 class="text-white text-center">Editar Entrada</h3>
   <div class="m-2">
     <label class="text-white form-label me-2" for="forumTitle"
       >Editar titulo del foro</label
     >
-    <input
-      class=""
-      type="text"
-      list="drawFiles"
-      name="forumTitle"
-      #forumTitle="ngModel"
-      [(ngModel)]="forumService.selectedForum.forumTitle"
-    />
+    <div>
+      <textarea
+        class=""
+        type="text"
+        list="drawFiles"
+        name="forumTitle"
+        #forumTitle="ngModel"
+        [(ngModel)]="forumService.selectedForum.forumTitle"
+        cols="40"
+        rows="3"
+        style="resize: none"
+      ></textarea>
+    </div>
   </div>
 
   <div class="m-2">
     <label class="text-white form-label me-2" for="forumTags"
       >Modificar Etiquetas</label
     >
-    <input
-      class=""
-      type="text"
-      list="drawFiles"
-      name="forumTags"
-      #forumTags="ngModel"
-      [(ngModel)]="forumService.selectedForum.forumTags"
-    />
+    <div>
+      <textarea
+        class=""
+        type="text"
+        list="drawFiles"
+        name="forumTags"
+        #forumTags="ngModel"
+        [(ngModel)]="forumService.selectedForum.forumTags"
+        cols="40"
+        rows="2"
+        style="resize: none"
+      ></textarea>
+    </div>
   </div>
 
   <div class="m-2">
     <label class="text-white form-label me-2" for="forumContent"
       >Editar contenido</label
     >
-    <input
-      class=""
-      type="text"
-      list="drawFiles"
-      name="ForumContent"
-      #ForumContent="ngModel"
-      [(ngModel)]="forumService.selectedForum.ForumContent"
-    />
+    <div>
+      <textarea
+        class=""
+        type="text"
+        list="drawFiles"
+        name="ForumContent"
+        #ForumContent="ngModel"
+        [(ngModel)]="forumService.selectedForum.ForumContent"
+        cols="40"
+        rows="5"
+        style="resize: none"
+      ></textarea>
+    </div>
   </div>
-
-  <button class="btn btn-light m-2">Envíar</button>
-  <button (click)="showforumUpFun()" class="btn btn-light m-2">Cerrar</button>
+  <div class="d-flex flex-row align-items-center justify-content-center">
+    <button class="btn btn-light m-2">Envíar</button>
+    <button (click)="showforumUpFun()" class="btn btn-light m-2">Cerrar</button>
+  </div>
+ 
 </form>
